added persistent storage on exit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="constant_C">C</string>
     <string name="edge_function_hint">Edge of endpoint =\n A * {edge of start point} + B * {num of start point} + C</string>
     <string name="sandbox_mode">Sandbox mode</string>
+    <string name="are_you_sure_want_to_exit">Are you sure you want to exit the app?</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
